--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -61,7 +61,7 @@ LoadModule actions_module modules/mod_actions.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
-# 2.5 Modules
+# 2.4 Modules
 LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule filter_module modules/mod_filter.so
 LoadModule reqtimeout_module modules/mod_reqtimeout.so
@@ -202,6 +202,7 @@ AddType application/x-httpd-php-source .phps
 	SSLStaplingReturnResponderErrors on
 	SSLRandomSeed startup builtin
 	SSLRandomSeed connect builtin
+	SSLCertificateFile /etc/ssl/certs/server.pem
 </IfModule>
 
 AddType text/xml .xml
