--- a/SOURCES/httpd.service
+++ b/SOURCES/httpd.service
@@ -6,7 +6,7 @@ After=network.target remote-fs.target nss-lookup.target populate-tmp.service vir
 User=root
 Type=forking
 EnvironmentFile=/etc/sysconfig/httpd
-ExecStartPre=-/usr/bin/mkdir /run/httpd 
+ExecStartPre=-/usr/bin/mkdir /run/httpd || /bin/true 
 PIDFile=/run/httpd.pid
 ExecStart=/etc/systemd/user/httpd.init start
 ExecReload=/etc/systemd/user/httpd.init reload
