Patch apxs Obey OPTIONS in httpd.init

--- a/SOURCES/httpd-apnscp-rewrite-map.conf
+++ b/SOURCES/httpd-apnscp-rewrite-map.conf
@@ -1,7 +1,7 @@
 SetEnvIfNoCase Host ^(?:www\.)?+([^:]+) DOMAIN=$1
 RewriteEngine Off
 
-<!IfDefine BYPASS_HTTP10>
+<IfDefine !BYPASS_HTTP10>
 # Spam bots
 RewriteMap HTTP10_MAP "dbm:conf/http10"
 RewriteCond %{SERVER_PROTOCOL} ^HTTP/1\.0$
@@ -14,7 +14,7 @@ RewriteRule ^ - [L,R=400]
 RewriteRule ^/cpadmin http://%{ENV:HOSTNAME}:2082/login?domain=%{HTTP_HOST} [L]
 RewriteRule ^/.well-known/autoconfig/(mail/.*) https://my.apnscp.com/$1 [R,QSA,L]
 RewriteRule ^/.well-known/(.*)$ /tmp/acme/.well-known/$1 [L]
-#RewriteRule ^/[Aa]utodiscover/[Aa]utodiscover\.xml /var/www/html/autodiscover.php [L] 
+#RewriteRule ^/[Aa]utodiscover/[cd Aa]utodiscover\.xml /var/www/html/autodiscover.php [L] 
 
 RewriteCond ${DOMAIN_MAP:%{ENV:DOMAIN}} ^(/.*)$
 RewriteRule ^ - [S=4,E=VHOST:%{ENV:DOMAIN},E=VPATH:%1,E=L-%{ENV:DOMAIN}:1]
