--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -11,7 +11,7 @@
 #            Make all local changes to httpd-custom.conf
 ###################################################################
 
-ServerRoot "/etc/httpd/"
+ServerRoot "/etc/httpd"
 
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
@@ -43,7 +43,9 @@ LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_connect_module modules/mod_proxy_connect.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+<IfDefine !NO_SSL>
 LoadModule ssl_module modules/mod_ssl.so
+</IfDefine>
 LoadModule mime_module modules/mod_mime.so
 LoadModule dav_module modules/mod_dav.so
 
@@ -57,16 +59,20 @@ LoadModule cgid_module modules/mod_cgid.so
 LoadModule dav_fs_module modules/mod_dav_fs.so
 LoadModule negotiation_module modules/mod_negotiation.so
 LoadModule dir_module modules/mod_dir.so
-LoadModule actions_module modules/mod_actions.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
 # 2.4 Modules
+<IfDefine !PREFORK>
 LoadModule mpm_event_module modules/mod_mpm_event.so
+</IfDefine>
+<IfDefine PREFORK>
+# Note, requires a rebuild of PHP
+LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
+</IfDefine>
 LoadModule filter_module modules/mod_filter.so
 LoadModule reqtimeout_module modules/mod_reqtimeout.so
 LoadModule unixd_module modules/mod_unixd.so
-LoadModule fcgid_module           modules/mod_fcgid.so
 LoadModule access_compat_module modules/mod_access_compat.so
 LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_core_module modules/mod_authz_core.so
@@ -76,7 +82,7 @@ LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 User apache
 Group apache
 
-DocumentRoot "/var/www/html/"
+DocumentRoot "/var/www/html"
 
 Timeout 30
 ServerTokens Prod
@@ -86,39 +92,41 @@ UseCanonicalName off
 PidFile run/httpd.pid
 
 <Directory />
-    Options FollowSymLinks
-    AllowOverride None
+		Options FollowSymLinks
+		AllowOverride None
 </Directory>
+
 <Directory /home/virtual/site*/fst/home/*>
-        AllowOverride All
-        Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
+				AllowOverride All
+				Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
 </Directory>
+
 <Directory /home/virtual/site*/fst/var/subdomain/*>
-        AllowOverride All
-        #RewriteBase /
-        Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
+				AllowOverride All				
+				Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
 </Directory>
+
 <Directory /home/virtual/site*/fst/var/www>
-        AllowOverride All
-        Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
+				AllowOverride All
+				Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
 </Directory>
 
 <Directory /var/www/html>
-    php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
-    php_value output_buffering 0
-    php_value memory_limit 192M
-    php_value upload_max_filesize 64M
+		<IfModule php7_module>
+			php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
+			php_value output_buffering 0
+			php_value memory_limit 192M
+			php_value upload_max_filesize 64M
+		</IfModule>
 
-    AllowOverride All
-    Options FollowSymLinks
-    RewriteEngine On
-    RewriteOptions InheritDownBefore
-    RewriteRule dummyset\.php$ /var/www/html/dummyset.php [L]
+		AllowOverride All
+		Options FollowSymLinks
+		RewriteRule dummyset\.php$ /var/www/html/dummyset.php [L]
 </Directory>
 
-<DirectoryMatch "^/var/www/html/(horde|roundcube|webmail|mail|MyAdmin|phpPgAdmin)">
-    RewriteCond %{HTTPS} !^on$
-    RewriteRule ^/var/www/html/(.*)$ https://%{ENV:HOSTNAME}/$1 [R=307,L]
+<DirectoryMatch "^/var/www/html/(?:horde|roundcube|webmail|mail|MyAdmin|phpPgAdmin)">
+		RewriteCond %{HTTPS} !^on$
+		RewriteRule ^/var/www/html/(.*)$ https://%{ENV:HOSTNAME}/$1 [R=307,L]
 </DirectoryMatch>
 
 <IfModule mod_status.c>
@@ -137,18 +145,18 @@ HostnameLookups off
 # viewed by Web clients. 
 #
 <FilesMatch "^\.">
-    Order allow,deny
-    Deny from all
-    Satisfy All
+		Order allow,deny
+		Deny from all
+		Satisfy All
 </FilesMatch>
 
 ErrorLog logs/error_log
 LogLevel notice
 
 <IfModule mime_module>
-    TypesConfig conf/mime.types
-    AddType application/x-compress .Z
-    AddType application/x-gzip .gz .tgz
+		TypesConfig conf/mime.types
+		AddType application/x-compress .Z
+		AddType application/x-gzip .gz .tgz
 		AddType text/html .shtml
 		AddOutputFilter INCLUDES shtml
 </IfModule>
@@ -156,34 +164,36 @@ LogLevel notice
 IndexOptions FancyIndexing HTMLTable VersionSort
 
 EnableSendfile on
+EnableMMAP on
 
 DavLockDB "/var/lib/dav/"
 
 <IfModule mpm_prefork_module>
-    ServerLimit         256
-    StartServers          5
-    MinSpareServers       10
-    MaxSpareServers      30
-    MaxClients         200
-    MaxConnectionsPerChild 256
+		ServerLimit         256
+		StartServers          5
+		MinSpareServers       10
+		MaxSpareServers      30
+		MaxClients         200
+		MaxConnectionsPerChild 256
 </IfModule>
+
 <IfModule mpm_event_module>
 	ServerLimit           32
 	MaxClients           500
 	StartServers           3
 	ThreadsPerChild       30
-
 	MaxRequestsPerChild 1024
 	MaxRequestWorkers 960
 	AsyncRequestWorkerFactor 2
 </IfModule>
+
 <IfModule mpm_worker_module>
-    StartServers          5
-    MaxClients          250
-    MinSpareThreads      25
-    MaxSpareThreads      75 
-    ThreadsPerChild      25
-    MaxConnectionsPerChild   128
+		StartServers          5
+		MaxClients          250
+		MinSpareThreads      25
+		MaxSpareThreads      75 
+		ThreadsPerChild      25
+		MaxConnectionsPerChild   128
 </IfModule>
 
 AddType application/x-x509-ca-cert .crt
@@ -195,6 +205,8 @@ AddType application/x-httpd-php-source .phps
 	SSLPassPhraseDialog  builtin
 	SSLSessionCache        shmcb:/tmp/ssl_scache(512000)
 	SSLSessionCacheTimeout  300
+	SSLSessionTickets on
+
 	SSLProtocol all -SSLv2 -SSLv3
 	SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:HIGH:MEDIUM:!MD5:!RC4
 	SSLHonorCipherOrder on
@@ -202,33 +214,28 @@ AddType application/x-httpd-php-source .phps
 	SSLStaplingReturnResponderErrors on
 	SSLRandomSeed startup builtin
 	SSLRandomSeed connect builtin
+	SSLStaplingCache shmcb:/tmp/ocsp(256000)
+
+ 	SSLUseStapling on                                                                                                                             
+ 	SSLStaplingResponderTimeout 5                                                                                                                               
+	SSLStaplingReturnResponderErrors on
 	SSLCertificateFile /etc/ssl/certs/server.pem
 </IfModule>
+
+<IfModule http2_module>
+	Protocols h2 h2c http/1.1
+ 	ProtocolsHonorOrder Off
+ </IfModule>
 
 AddType text/xml .xml
 AddHandler cgi-script .cgi
 AddHandler cgi-script .pl
 AddHandler cgi-script .rb
 
-<IfModule mod_fcgid.c>
-	IdleTimeout 600
-	ProcessLifeTime 86400
-	DefaultMaxClassProcessCount 3
-	FcgidInitialEnv RAILS_ENV  production
-	FcgidInitialEnv PERL5LIB   /usr/local/lib/perl5/site_perl
-	FcgidPassHeader Authorization
-	FcgidMinProcessesPerClass 1
-	FcgidMaxProcesses 30 
-	FcgidMaxProcessesPerClass 3
-	FcgidIPCDir /var/tmp/fcgi
-	# 64 MB
-	FcgidMaxRequestLen 67108864
-	AddHandler fcgid-script .fcgi
-</IfModule>
-
 RLimitCPU 60 120
 RLimitMem 268435456
 RLimitNProc 15 50
+
 SetEnv PERL5LIB /usr/local/lib/perl5/site_perl
 
 AddOutputFilterByType DEFLATE text/xml text/css text/plain text/javascript application/x-javascript application/javascript text/html application/vnd.ms-fontobject
@@ -237,7 +244,6 @@ AddOutputFilterByType DEFLATE text/xml text/css text/plain text/javascript appli
 <Files ~ "\.shtml$">
 	SetEnv no-gzip
 </Files>
-
 
 TraceEnable off
 BufferedLogs on
@@ -252,16 +258,6 @@ Include conf/httpd-apnscp-rewrite-map.conf
 	AllowOverride None
 </Directory>
 
-<IfModule passenger_module>
-	PassengerRoot /.socket/passenger
-	PassengerDefaultRuby /usr/bin/ruby
-	PassengerInstanceRegistryDir /.socket/passenger/sockets
-	PassengerDataBufferDir /.socket/passenger/sockets
-	PassengerMaxInstancesPerApp 5
-	PassengerStatThrottleRate  60
-	RailsSpawnMethod smart-lv2
-	PassengerEnabled on
-</IfModule>
 <IfModule cgid_module>
 	ScriptSock /.socket/fcgi/cgid.sock
 </IfModule>
@@ -280,14 +276,17 @@ Include conf/httpd-apnscp-rewrite-map.conf
 
 # BEGIN PHP CONFIG
 # Override via httpd-custom.conf
-php_admin_value memory_limit 256m
-php_admin_value mail.add_x_header 1
-php_admin_value opcache.restrict_api "/tmp"
+<IfModule php7_module>
+	php_admin_value memory_limit 256m
+	php_admin_value mail.add_x_header 1
+	php_admin_value opcache.restrict_api "/tmp"
+</IfModule>
 # END PHP CONFIG
 
 # BEGIN AMENDMENTS
 # END AMENDMENTS
 
+IncludeOptional conf.d/*
 Include conf/httpd-custom.conf
-Include conf/virtual-httpd-built
+IncludeOptional conf/virtual-httpd-built
 
