intelligent detection of PHP prefer HTTPS redirect remove proxy/alias/redirect markers

--- a/SOURCES/httpd-apnscp-rewrite-map.conf
+++ b/SOURCES/httpd-apnscp-rewrite-map.conf
@@ -11,30 +11,23 @@ RewriteCond ${HTTP10_MAP:%{ENV:DOMAIN}|NOT-FOUND} =NOT-FOUND
 RewriteRule ^ - [L,R=400]
 </IfDefine>
 
-RewriteRule ^/cpadmin http://%{ENV:HOSTNAME}:2082/login?domain=%{HTTP_HOST} [L]
-RewriteRule ^/.well-known/autoconfig/(mail/.*) https://my.apnscp.com/$1 [R,QSA,L]
+RewriteRule ^/cpadmin https://%{ENV:HOSTNAME}:2083/login?domain=%{HTTP_HOST} [L]
 RewriteRule ^/.well-known/(.*)$ /tmp/acme/.well-known/$1 [L]
-#RewriteRule ^/[Aa]utodiscover/[cd Aa]utodiscover\.xml /var/www/html/autodiscover.php [L] 
+# Thunderbird
+RewriteRule ^/.well-known/autoconfig/(mail/.*) /var/www/html/autodiscover.php [QSA,L]
+# Outlook
+RewriteRule ^/[Aa]utodiscover/[Aa]utodiscover\.xml /var/www/html/autodiscover.php [QSA,L] 
 
 RewriteCond ${DOMAIN_MAP:%{ENV:DOMAIN}} ^(/.*)$
-RewriteRule ^ - [S=4,E=VHOST:%{ENV:DOMAIN},E=VPATH:%1,E=L-%{ENV:DOMAIN}:1]
-
-RewriteCond ${DOMAIN_MAP:%{ENV:DOMAIN}} ^:P:(http.+)$
-RewriteRule ^(.*)$ %1/$1 [P,L]
-
-RewriteCond ${DOMAIN_MAP:%{ENV:DOMAIN}} ^:A:(.+)$
-RewriteCond ${DOMAIN_MAP:%1} ^(/.*)$
 RewriteRule ^ - [S=2,E=VHOST:%{ENV:DOMAIN},E=VPATH:%1,E=L-%{ENV:DOMAIN}:1]
-
-RewriteCond ${DOMAIN_MAP:%{ENV:DOMAIN}} ^:R:(http.+)$
-RewriteRule ^(.*)$ %1/$2 [R,L]
+# No match
+RewriteRule ^ - [S=3]
 
 # No Match, skip to subdomains
-RewriteRule ^ - [S=2]
+RewriteRule ^ - [S=1]
 
 RewriteCond %{ENV:VPATH}$1 !-f
 #RewriteCond /%{ENV:VPATH}$1 !-d
-RewriteRule ^/cgi-bin(.*)$ /home/virtual/site%{ENV:SITE_ID}/fst/var/www/cgi-bin$1 [L]
 RewriteRule ^(.*)$ %{ENV:VPATH}$1 [L,E=L-%{ENV:DOMAIN}:1]
 
 RewriteCond %{ENV:DOMAIN} ^([^.]++)\.([^.]{3,}+\..++)$
