--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -82,6 +82,23 @@ LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 User apache
 Group apache
 
+# Check for PHP presence
+<IfModule php7_module>
+  Define PHP_INSTALLED
+</IfModule>
+<IfModule php5_module>
+  Define PHP_INSTALLED
+</IfModule>
+<IfModule php8_module>
+  Define PHP_INSTALLED
+</IfModule>
+
+<IfDefine !PHP_INSTALLED>
+  <Files "*.php">
+    Deny from all
+  </Files>
+</IfDefine>
+
 DocumentRoot "/var/www/html"
 
 Timeout 30
@@ -92,36 +109,43 @@ UseCanonicalName off
 PidFile run/httpd.pid
 
 <Directory />
-		Options FollowSymLinks
-		AllowOverride None
+	Options FollowSymLinks
+	AllowOverride None
 </Directory>
 
 <Directory /home/virtual/site*/fst/home/*>
-				AllowOverride All
-				Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
+  AllowOverride All
+  Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
 </Directory>
 
 <Directory /home/virtual/site*/fst/var/subdomain/*>
-				AllowOverride All				
-				Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
+	AllowOverride All				
+	Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
 </Directory>
 
 <Directory /home/virtual/site*/fst/var/www>
-				AllowOverride All
-				Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
+	AllowOverride All
+	Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
 </Directory>
 
-<Directory /var/www/html>
-		<IfModule php7_module>
-			php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
-			php_value output_buffering 0
-			php_value memory_limit 192M
-			php_value upload_max_filesize 64M
-		</IfModule>
+<IfDefine PHP_INSTALLED>
+  php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
+  php_value output_buffering 0
+  php_value memory_limit 192M
+  php_value upload_max_filesize 64M
+</IfDefine>
 
-		AllowOverride All
-		Options FollowSymLinks
-		RewriteRule dummyset\.php$ /var/www/html/dummyset.php [L]
+<Directory /var/www/html>
+  <IfDefine PHP_INSTALLED>
+  	php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
+  	php_value output_buffering 0
+  	php_value memory_limit 192M
+  	php_value upload_max_filesize 64M
+  </IfDefine>
+
+	AllowOverride All
+	Options FollowSymLinks
+	RewriteRule dummyset\.php$ /usr/local/apnscp/apps/webmail/dummyset.php [L]
 </Directory>
 
 <DirectoryMatch "^/var/www/html/(?:horde|roundcube|webmail|mail|MyAdmin|phpPgAdmin)">
@@ -169,12 +193,12 @@ EnableMMAP on
 DavLockDB "/var/lib/dav/"
 
 <IfModule mpm_prefork_module>
-		ServerLimit         256
-		StartServers          5
-		MinSpareServers       10
-		MaxSpareServers      30
-		MaxClients         200
-		MaxConnectionsPerChild 256
+	ServerLimit         256
+	StartServers          5
+	MinSpareServers       10
+	MaxSpareServers      30
+	MaxClients         200
+	MaxConnectionsPerChild 256
 </IfModule>
 
 <IfModule mpm_event_module>
@@ -188,12 +212,12 @@ DavLockDB "/var/lib/dav/"
 </IfModule>
 
 <IfModule mpm_worker_module>
-		StartServers          5
-		MaxClients          250
-		MinSpareThreads      25
-		MaxSpareThreads      75 
-		ThreadsPerChild      25
-		MaxConnectionsPerChild   128
+	StartServers          5
+	MaxClients          250
+	MinSpareThreads      25
+	MaxSpareThreads      75 
+	ThreadsPerChild      25
+	MaxConnectionsPerChild   128
 </IfModule>
 
 AddType application/x-x509-ca-cert .crt
@@ -202,19 +226,19 @@ AddType application/x-httpd-php .php
 AddType application/x-httpd-php-source .phps
 
 <IfModule ssl_module>
-	SSLPassPhraseDialog  builtin
-	SSLSessionCache        shmcb:/tmp/ssl_scache(512000)
-	SSLSessionCacheTimeout  300
-	SSLSessionTickets on
+  SSLPassPhraseDialog  builtin
+  SSLSessionCache        shmcb:/tmp/ssl_scache(512000)
+  SSLSessionCacheTimeout  300
+  SSLSessionTickets on
 
-	SSLProtocol all -SSLv2 -SSLv3
-	SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:HIGH:MEDIUM:!MD5:!RC4
-	SSLHonorCipherOrder on
-	SSLStaplingResponderTimeout 5
-	SSLStaplingReturnResponderErrors on
-	SSLRandomSeed startup builtin
-	SSLRandomSeed connect builtin
-	SSLStaplingCache shmcb:/tmp/ocsp(256000)
+  SSLProtocol all -SSLv2 -SSLv3
+  SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:HIGH:MEDIUM:!MD5:!RC4
+  SSLHonorCipherOrder on
+  SSLStaplingResponderTimeout 5
+  SSLStaplingReturnResponderErrors on
+  SSLRandomSeed startup builtin
+  SSLRandomSeed connect builtin
+  SSLStaplingCache shmcb:/tmp/ocsp(256000)
 
  	SSLUseStapling on                                                                                                                             
  	SSLStaplingResponderTimeout 5                                                                                                                               
@@ -241,7 +265,7 @@ SetEnv PERL5LIB /usr/local/lib/perl5/site_perl
 AddOutputFilterByType DEFLATE text/xml text/css text/plain text/javascript application/x-javascript application/javascript text/html application/vnd.ms-fontobject
 
 # shtml does not parse with Apache 2.2.17 and DEFLATE
-<Files ~ "\.shtml$">
+<Files  "*.shtml">
 	SetEnv no-gzip
 </Files>
 
@@ -276,11 +300,11 @@ Include conf/httpd-apnscp-rewrite-map.conf
 
 # BEGIN PHP CONFIG
 # Override via httpd-custom.conf
-<IfModule php7_module>
+<IfDefine PHP_INSTALLED>
 	php_admin_value memory_limit 256m
 	php_admin_value mail.add_x_header 1
 	php_admin_value opcache.restrict_api "/tmp"
-</IfModule>
+</IfDefine>
 # END PHP CONFIG
 
 # BEGIN AMENDMENTS
