--- a/SOURCES/httpd-custom.conf
+++ b/SOURCES/httpd-custom.conf
@@ -1,14 +1,15 @@
-Listen 80 443
+Listen 80
 
 <VirtualHost *:80>
 	RewriteEngine On
-	RewriteOptions InheritDownBefore
+	RewriteOptions InheritBefore
 </VirtualHost>
 
 <IfModule ssl_module>
-	<VirtualHost *:43>
+	Listen 443
+	<VirtualHost *:443>
 		SSLEngine On
 		RewriteEngine On
-		RewriteOptions InheritDownBefore
+		RewriteOptions InheritBefore
 	</VirtualHost>
 </IfModule>
