Move MyAdmin to phpMyAdmin

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -148,7 +148,7 @@ PidFile run/httpd.pid
 	RewriteRule dummyset\.php$ /usr/local/apnscp/apps/webmail/dummyset.php [L]
 </Directory>
 
-<DirectoryMatch "^/var/www/html/(?:horde|roundcube|webmail|mail|MyAdmin|phpPgAdmin)">
+<DirectoryMatch "^/var/www/html/(?:horde|roundcube|webmail|mail|phpMyAdmin|phpPgAdmin)">
 		RewriteCond %{HTTPS} !^on$
 		RewriteRule ^/var/www/html/(.*)$ https://%{ENV:HOSTNAME}/$1 [R=307,L]
 </DirectoryMatch>
