--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -137,7 +137,7 @@ PidFile run/httpd.pid
 
 <Directory /var/www/html>
   <IfDefine PHP_INSTALLED>
-  	php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
+  	php_admin_value open_basedir "/var/www:/var/lib:/tmp:/usr:/.socket"
   	php_value output_buffering 0
   	php_value memory_limit 192M
   	php_value upload_max_filesize 64M
