Add /etc, used by /etc/resolv.conf to /var/www/html paths Use dummyset.php and create a hardlink on apnscp boot

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -137,7 +137,7 @@ PidFile run/httpd.pid
 
 <Directory /var/www/html>
   <IfDefine PHP_INSTALLED>
-  	php_admin_value open_basedir "/var/www:/var/lib:/tmp:/usr:/.socket"
+  	php_admin_value open_basedir "/var/www:/etc:/var/lib:/tmp:/usr:/.socket"
   	php_value output_buffering 0
   	php_value memory_limit 192M
   	php_value upload_max_filesize 64M
@@ -145,7 +145,7 @@ PidFile run/httpd.pid
 
 	AllowOverride All
 	Options FollowSymLinks
-	RewriteRule dummyset\.php$ /usr/local/apnscp/apps/webmail/dummyset.php [L]
+	RewriteRule dummyset\.php$ /var/www/html/dummyset.php [L]
 </Directory>
 
 <DirectoryMatch "^/var/www/html/(?:horde|roundcube|webmail|mail|phpMyAdmin|phpPgAdmin)">
