Inherit rewrite options in /var/www/html

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -145,6 +145,7 @@ PidFile run/httpd.pid
 
 	AllowOverride All
 	Options FollowSymLinks
+	RewriteOptions inherit
 	RewriteRule dummyset\.php$ /var/www/html/dummyset.php [L]
 </Directory>
 
