FIX: jump too far ahead on no host match (httpd-apnscp-rewrite-map) CHG: enable cache CHG: limit directory lstat() calls by propagating AllowOverride checks higher up the hierarchy CHG: regex -> glob file match CHG: set default client limit to 200; 40 threads, 5 processes CHG: carry over any extraneous LoadModule directive between upgrades to httpd.conf

--- a/SOURCES/httpd-apnscp-rewrite-map.conf
+++ b/SOURCES/httpd-apnscp-rewrite-map.conf
@@ -1,3 +1,5 @@
+# (c) 2018 Apis Networks
+# Domain rewrite maps
 SetEnvIfNoCase Host ^(?:www\.)?+([^:]+) DOMAIN=$1
 RewriteEngine Off
 
@@ -19,15 +21,11 @@ RewriteRule ^/.well-known/autoconfig/(mail/.*) /var/www/html/autodiscover.php [Q
 RewriteRule ^/[Aa]utodiscover/[Aa]utodiscover\.xml /var/www/html/autodiscover.php [QSA,L] 
 
 RewriteCond ${DOMAIN_MAP:%{ENV:DOMAIN}} ^(/.*)$
-RewriteRule ^ - [S=2,E=VHOST:%{ENV:DOMAIN},E=VPATH:%1,E=L-%{ENV:DOMAIN}:1]
-# No match
-RewriteRule ^ - [S=3]
+RewriteRule ^ - [S=1,E=VHOST:%{ENV:DOMAIN},E=VPATH:%1,E=L-%{ENV:DOMAIN}:1]
 
 # No Match, skip to subdomains
 RewriteRule ^ - [S=1]
 
-RewriteCond %{ENV:VPATH}$1 !-f
-#RewriteCond /%{ENV:VPATH}$1 !-d
 RewriteRule ^(.*)$ %{ENV:VPATH}$1 [L,E=L-%{ENV:DOMAIN}:1]
 
 RewriteCond %{ENV:DOMAIN} ^([^.]++)\.([^.]{3,}+\..++)$
