--- a/SOURCES/httpd-custom.conf
+++ b/SOURCES/httpd-custom.conf
@@ -1,15 +1,15 @@
 Listen 80
 
-<VirtualHost *:80>
+<VirtualHost _default_:80>
 	RewriteEngine On
-	RewriteOptions InheritBefore
+	RewriteOptions Inherit
 </VirtualHost>
 
 <IfModule ssl_module>
 	Listen 443
-	<VirtualHost *:443>
+	<VirtualHost _default_:443>
 		SSLEngine On
 		RewriteEngine On
-		RewriteOptions InheritBefore
+		RewriteOptions Inherit
 	</VirtualHost>
 </IfModule>
