--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -31,6 +31,12 @@ LoadModule authz_user_module modules/mod_authz_user.so
 LoadModule authz_dbm_module modules/mod_authz_dbm.so
 LoadModule auth_basic_module modules/mod_auth_basic.so
 LoadModule cache_module modules/mod_cache.so
+<IfDefine !CACHE_MEMORY>
+LoadModule cache_disk_module modules/mod_cache_disk.so
+</IfDefine>
+<IfDefine CACHE_MEMORY>
+LoadModule cache_socache_module modules/mod_cache_socache.so
+</IfDefine>
 LoadModule include_module modules/mod_include.so
 LoadModule deflate_module modules/mod_deflate.so
 LoadModule log_config_module modules/mod_log_config.so
@@ -78,6 +84,16 @@ LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule http2_module         modules/mod_http2.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
+#
+###########################################################################
+# Custom modules will be added by apxs below here and carried over
+# between httpd package upgrades. You must leave this "MODULE_MARKER" marker
+#
+# Only modules loaded with a "LoadModule" directive are carried over.
+# Make all module configuration changes to httpd-custom.conf
+###########################################################################
+# MODULE_MARKER
+
 
 User apache
 Group apache
@@ -108,19 +124,18 @@ ServerSignature Off
 UseCanonicalName off
 PidFile run/httpd.pid
 
-<Directory />
+<Directory /home/virtual/site*/fst>
 	Options FollowSymLinks
 	AllowOverride None
+</Directory>
+
+<Directory /home/virtual/site*/fst/var/subdomain/*>		
+	Options +SymLinksIfOwnerMatch
 </Directory>
 
 <Directory /home/virtual/site*/fst/home/*>
   AllowOverride All
   Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
-</Directory>
-
-<Directory /home/virtual/site*/fst/var/subdomain/*>
-	AllowOverride All				
-	Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
 </Directory>
 
 <Directory /home/virtual/site*/fst/var/www>
@@ -130,16 +145,12 @@ PidFile run/httpd.pid
 
 <IfDefine PHP_INSTALLED>
   php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
-  php_value output_buffering 0
-  php_value memory_limit 192M
-  php_value upload_max_filesize 64M
+  php_admin_value memory_limit 192M
 </IfDefine>
 
 <Directory /var/www/html>
   <IfDefine PHP_INSTALLED>
   	php_admin_value open_basedir "/var/www:/etc:/var/lib:/tmp:/usr:/.socket"
-  	php_value output_buffering 0
-  	php_value memory_limit 192M
   	php_value upload_max_filesize 64M
   </IfDefine>
 
@@ -162,21 +173,16 @@ PidFile run/httpd.pid
 </IfModule>
 
 
-DirectoryIndex index.html index.php index.shtml index.htm index.fcgi
+DirectoryIndex index.html index.php index.shtml index.fcgi
 HostnameLookups off
 
-#
 # The following lines prevent .htaccess and .htpasswd files from being 
 # viewed by Web clients. 
-#
-<FilesMatch "^\.">
+<Files ".*">
 		Order allow,deny
 		Deny from all
 		Satisfy All
-</FilesMatch>
-
-ErrorLog logs/error_log
-LogLevel notice
+</Files>
 
 <IfModule mime_module>
 		TypesConfig conf/mime.types
@@ -202,15 +208,22 @@ DavLockDB "/var/lib/dav/"
 	MaxConnectionsPerChild 256
 </IfModule>
 
+# Start with 2 servers, up to 200 concurrent clients
+# Maxed out, assuming 1 sec/request, a server could
+# handle 17.2 million requests per day
+# Tweak as necessary for larger environments
+# NB: Each thread locks up to 2 MB via MaxMemFree
+# In heavy traffic, low memory scenarios this can be burdensome
 <IfModule mpm_event_module>
-	ServerLimit           32
-	MaxClients           500
-	StartServers           3
-	ThreadsPerChild       30
+	ServerLimit           5
+	MaxClients           200
+	StartServers           1
+	ThreadsPerChild       40
 	MaxRequestsPerChild 1024
-	MaxRequestWorkers 960
+	MaxRequestWorkers 200
 	AsyncRequestWorkerFactor 2
 </IfModule>
+
 
 <IfModule mpm_worker_module>
 	StartServers          5
@@ -274,6 +287,10 @@ TraceEnable off
 BufferedLogs on
 
 LogFormat "%{SITE_ID}e %{DOMAIN}e %p %{%s}t %I %O" bw_log
+LogFormat "%h %V %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+CustomLog logs/access_log combined
+ErrorLog logs/error_log
+LogLevel notice
 
 # BEGIN DOMAIN REWRITES
 Include conf/httpd-apnscp-rewrite-map.conf
@@ -308,10 +325,27 @@ Include conf/httpd-apnscp-rewrite-map.conf
 </IfDefine>
 # END PHP CONFIG
 
+<IfModule cache_disk_module>
+	CacheEnable disk /
+	CacheRoot /var/cache/httpd/cache-root
+	CacheDirLength 2
+</IfModule>
+
+<IfModule cache_socache_module>
+	CacheSocache shmcb
+	CacheSocacheMaxSize 102400
+</IfModule>
+
+# A page modified 100 minutes ago will expire in 10 minutes
+CacheLastModifiedFactor .1
+# Always check again after 6 hours
+CacheMaxExpire 21600
+
+AddOutputFilterByType CACHE;INCLUDES;DEFLATE text/html
+
 # BEGIN AMENDMENTS
 # END AMENDMENTS
 
 IncludeOptional conf.d/*
 Include conf/httpd-custom.conf
 IncludeOptional conf/virtual-httpd-built
-
