CHG: make cache tuneable via NO_CACHE

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -30,9 +30,11 @@ LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
 LoadModule authz_user_module modules/mod_authz_user.so
 LoadModule authz_dbm_module modules/mod_authz_dbm.so
 LoadModule auth_basic_module modules/mod_auth_basic.so
+<IfDefine !NO_CACHE>
 LoadModule cache_module modules/mod_cache.so
 <IfDefine !CACHE_MEMORY>
 LoadModule cache_disk_module modules/mod_cache_disk.so
+</IfDefine>
 </IfDefine>
 <IfDefine CACHE_MEMORY>
 LoadModule cache_socache_module modules/mod_cache_socache.so
@@ -254,10 +256,10 @@ AddType application/x-httpd-php-source .phps
   SSLRandomSeed connect builtin
   SSLStaplingCache shmcb:/tmp/ocsp(256000)
 
- 	SSLUseStapling on                                                                                                                             
- 	SSLStaplingResponderTimeout 5                                                                                                                               
-	SSLStaplingReturnResponderErrors on
-	SSLCertificateFile /etc/ssl/certs/server.pem
+  SSLUseStapling on                                                                                                                             
+  SSLStaplingResponderTimeout 5                                                                                                                               
+  SSLStaplingReturnResponderErrors on
+  SSLCertificateFile /etc/ssl/certs/server.pem
 </IfModule>
 
 <IfModule http2_module>
@@ -336,12 +338,14 @@ Include conf/httpd-apnscp-rewrite-map.conf
 	CacheSocacheMaxSize 102400
 </IfModule>
 
-# A page modified 100 minutes ago will expire in 10 minutes
-CacheLastModifiedFactor .1
-# Always check again after 6 hours
-CacheMaxExpire 21600
+<IfModule cache_module>
+  # A page modified 100 minutes ago will expire in 10 minutes
+  CacheLastModifiedFactor .1
+  # Always check again after 6 hours
+  CacheMaxExpire 21600
 
-AddOutputFilterByType CACHE;INCLUDES;DEFLATE text/html
+  AddOutputFilterByType CACHE;INCLUDES;DEFLATE text/html
+</IfModule>
 
 # BEGIN AMENDMENTS
 # END AMENDMENTS
