Correct symlink rules, bandwidth log alias, shuffle disk/memory cache priority such that memory comes first

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -58,7 +58,7 @@ LoadModule mime_module modules/mod_mime.so
 LoadModule dav_module modules/mod_dav.so
 
 <IfDefine STATUS>
-	LoadModule status_module modules/mod_status.so
+  LoadModule status_module modules/mod_status.so
 </IfDefine>
 
 LoadModule autoindex_module modules/mod_autoindex.so
@@ -86,6 +86,7 @@ LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule http2_module         modules/mod_http2.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
+
 #
 ###########################################################################
 # Custom modules will be added by apxs below here and carried over
@@ -126,24 +127,26 @@ ServerSignature Off
 UseCanonicalName off
 PidFile run/httpd.pid
 
-<Directory /home/virtual/site*/fst>
-	Options FollowSymLinks
-	AllowOverride None
+<Directory />
+  Options FollowSymLinks
+  AllowOverride None
 </Directory>
 
-<Directory /home/virtual/site*/fst/var/subdomain/*>		
-	Options +SymLinksIfOwnerMatch
+<Directory /home/virtual/site*/fst/var/subdomain/*/html>
+  AllowOverride All
+  Options SymLinksIfOwnerMatch
 </Directory>
 
 <Directory /home/virtual/site*/fst/home/*>
   AllowOverride All
-  Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
+  Options SymLinksIfOwnerMatch
 </Directory>
 
 <Directory /home/virtual/site*/fst/var/www>
-	AllowOverride All
-	Options ExecCGI SymLinksIfOwnerMatch Includes FollowSymLinks 
+  AllowOverride All
+  Options SymLinksIfOwnerMatch
 </Directory>
+
 
 <IfDefine PHP_INSTALLED>
   php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
@@ -152,26 +155,27 @@ PidFile run/httpd.pid
 
 <Directory /var/www/html>
   <IfDefine PHP_INSTALLED>
-  	php_admin_value open_basedir "/var/www:/etc:/var/lib:/tmp:/usr:/.socket"
-  	php_value upload_max_filesize 64M
+    php_admin_value open_basedir "/var/www:/etc:/var/lib:/tmp:/usr:/.socket"
+    php_value upload_max_filesize 64M
   </IfDefine>
 
-	AllowOverride All
-	Options FollowSymLinks
-	RewriteOptions inherit
-	RewriteRule dummyset\.php$ /var/www/html/dummyset.php [L]
+  AllowOverride All
+  Options FollowSymLinks
+  RewriteOptions InheritBefore
+  RewriteBase "/var/www/html"
+  RewriteRule dummyset\.php$ /var/www/html/dummyset.php [L]
 </Directory>
 
 <DirectoryMatch "^/var/www/html/(?:horde|roundcube|webmail|mail|phpMyAdmin|phpPgAdmin)">
-		RewriteCond %{HTTPS} !^on$
-		RewriteRule ^/var/www/html/(.*)$ https://%{ENV:HOSTNAME}/$1 [R=307,L]
+    RewriteCond %{HTTPS} !^on$
+    RewriteRule ^/var/www/html/(.*)$ https://%{ENV:HOSTNAME}/$1 [R=307,L]
 </DirectoryMatch>
 
 <IfModule mod_status.c>
-	ExtendedStatus on
-	<Location /server-status>
-		SetHandler server-status
-	</Location>
+  ExtendedStatus on
+  <Location /server-status>
+    SetHandler server-status
+  </Location>
 </IfModule>
 
 
@@ -181,17 +185,17 @@ HostnameLookups off
 # The following lines prevent .htaccess and .htpasswd files from being 
 # viewed by Web clients. 
 <Files ".*">
-		Order allow,deny
-		Deny from all
-		Satisfy All
+    Order allow,deny
+    Deny from all
+    Satisfy All
 </Files>
 
 <IfModule mime_module>
-		TypesConfig conf/mime.types
-		AddType application/x-compress .Z
-		AddType application/x-gzip .gz .tgz
-		AddType text/html .shtml
-		AddOutputFilter INCLUDES shtml
+    TypesConfig conf/mime.types
+    AddType application/x-compress .Z
+    AddType application/x-gzip .gz .tgz
+    AddType text/html .shtml
+    AddOutputFilter INCLUDES shtml
 </IfModule>
 
 IndexOptions FancyIndexing HTMLTable VersionSort
@@ -199,15 +203,17 @@ IndexOptions FancyIndexing HTMLTable VersionSort
 EnableSendfile on
 EnableMMAP on
 
-DavLockDB "/var/lib/dav/"
+<IfModule dav_module>
+  DavLockDB "/var/lib/dav/"
+</IfModule>
 
 <IfModule mpm_prefork_module>
-	ServerLimit         256
-	StartServers          5
-	MinSpareServers       10
-	MaxSpareServers      30
-	MaxClients         200
-	MaxConnectionsPerChild 256
+  ServerLimit         256
+  StartServers          5
+  MinSpareServers       10
+  MaxSpareServers      30
+  MaxClients         200
+  MaxConnectionsPerChild 256
 </IfModule>
 
 # Start with 2 servers, up to 200 concurrent clients
@@ -217,23 +223,22 @@ DavLockDB "/var/lib/dav/"
 # NB: Each thread locks up to 2 MB via MaxMemFree
 # In heavy traffic, low memory scenarios this can be burdensome
 <IfModule mpm_event_module>
-	ServerLimit           5
-	MaxClients           200
-	StartServers           1
-	ThreadsPerChild       40
-	MaxRequestsPerChild 1024
-	MaxRequestWorkers 200
-	AsyncRequestWorkerFactor 2
+  ServerLimit           10
+  StartServers           1
+  ThreadsPerChild       20
+  MaxRequestsPerChild 1024
+  MaxRequestWorkers 200
+  AsyncRequestWorkerFactor 2
 </IfModule>
 
 
 <IfModule mpm_worker_module>
-	StartServers          5
-	MaxClients          250
-	MinSpareThreads      25
-	MaxSpareThreads      75 
-	ThreadsPerChild      25
-	MaxConnectionsPerChild   128
+  StartServers          5
+  MaxClients          250
+  MinSpareThreads      25
+  MaxSpareThreads      75 
+  ThreadsPerChild      25
+  MaxConnectionsPerChild   128
 </IfModule>
 
 AddType application/x-x509-ca-cert .crt
@@ -263,8 +268,8 @@ AddType application/x-httpd-php-source .phps
 </IfModule>
 
 <IfModule http2_module>
-	Protocols h2 h2c http/1.1
- 	ProtocolsHonorOrder Off
+  Protocols h2 h2c http/1.1
+  ProtocolsHonorOrder Off
  </IfModule>
 
 AddType text/xml .xml
@@ -278,17 +283,17 @@ RLimitNProc 15 50
 
 SetEnv PERL5LIB /usr/local/lib/perl5/site_perl
 
-AddOutputFilterByType DEFLATE text/xml text/css text/plain text/javascript application/x-javascript application/javascript text/html application/vnd.ms-fontobject
+AddOutputFilterByType DEFLATE text/html text/xml text/css text/plain text/javascript application/x-javascript application/javascript text/html application/vnd.ms-fontobject
 
 # shtml does not parse with Apache 2.2.17 and DEFLATE
 <Files  "*.shtml">
-	SetEnv no-gzip
+  SetEnv no-gzip
 </Files>
 
 TraceEnable off
 BufferedLogs on
 
-LogFormat "%{SITE_ID}e %{DOMAIN}e %p %{%s}t %I %O" bw_log
+LogFormat "%{SITE_ID}e %{%s}t %I %O %V" bandwidth
 LogFormat "%h %V %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
 CustomLog logs/access_log combined
 ErrorLog logs/error_log
@@ -299,43 +304,44 @@ Include conf/httpd-apnscp-rewrite-map.conf
 # END DOMAIN REWRITES
 
 <Directory /tmp>
-	AllowOverride None
+  AllowOverride None
 </Directory>
 
 <IfModule cgid_module>
-	ScriptSock /.socket/fcgi/cgid.sock
+  ScriptSock /.socket/fcgi/cgid.sock
 </IfModule>
 
 <IfDefine CORE>
-	CoreDumpDirectory /tmp
+  CoreDumpDirectory /tmp
 </IfDefine>
 
 # BEGIN COMMON ASSETS
 <DirectoryMatch "^/home/virtual/site[0-9]+/fst/(?:var/www|home/[^/]*)/.+/(.*/)?(?:wp-content/uploads/|wp-content/cache|cache/|sites/default/).*$">
-	RemoveHandler .pl .py .cgi
-	RemoveType .php
-	AllowOverride None
+  RemoveHandler .pl .py .cgi
+  RemoveType .php
+  AllowOverride None
 </DirectoryMatch>
 # END COMMON ASSETS
 
 # BEGIN PHP CONFIG
 # Override via httpd-custom.conf
 <IfDefine PHP_INSTALLED>
-	php_admin_value memory_limit 256m
-	php_admin_value mail.add_x_header 1
-	php_admin_value opcache.restrict_api "/tmp"
+  php_admin_value memory_limit 256m
+  php_admin_value mail.add_x_header 1
+  php_admin_value opcache.restrict_api "/tmp"
 </IfDefine>
 # END PHP CONFIG
 
-<IfModule cache_disk_module>
-	CacheEnable disk /
-	CacheRoot /var/cache/httpd/cache-root
-	CacheDirLength 2
+<IfModule cache_socache_module>
+  CacheEnable socache /
+  CacheSocache shmcb
+  CacheSocacheMaxSize 102400
 </IfModule>
 
-<IfModule cache_socache_module>
-	CacheSocache shmcb
-	CacheSocacheMaxSize 102400
+<IfModule cache_disk_module>
+  CacheEnable disk /
+  CacheRoot /var/cache/httpd/cache-root
+  CacheDirLength 2
 </IfModule>
 
 <IfModule cache_module>
@@ -343,8 +349,6 @@ Include conf/httpd-apnscp-rewrite-map.conf
   CacheLastModifiedFactor .1
   # Always check again after 6 hours
   CacheMaxExpire 21600
-
-  AddOutputFilterByType CACHE;INCLUDES;DEFLATE text/html
 </IfModule>
 
 # BEGIN AMENDMENTS
