Update Apache suexec- remove docroot check add svg deflate cache enrollment optional

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -86,7 +86,6 @@ LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule http2_module         modules/mod_http2.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
-
 #
 ###########################################################################
 # Custom modules will be added by apxs below here and carried over
@@ -195,6 +194,7 @@ HostnameLookups off
     AddType application/x-compress .Z
     AddType application/x-gzip .gz .tgz
     AddType text/html .shtml
+    AddType image/svg+xml svg svgz
     AddOutputFilter INCLUDES shtml
 </IfModule>
 
@@ -283,7 +283,7 @@ RLimitNProc 15 50
 
 SetEnv PERL5LIB /usr/local/lib/perl5/site_perl
 
-AddOutputFilterByType DEFLATE text/html text/xml text/css text/plain text/javascript application/x-javascript application/javascript text/html application/vnd.ms-fontobject
+AddOutputFilterByType DEFLATE text/html text/xml text/css text/plain text/javascript application/x-javascript application/javascript image/svg+xml 
 
 # shtml does not parse with Apache 2.2.17 and DEFLATE
 <Files  "*.shtml">
@@ -349,6 +349,11 @@ Include conf/httpd-apnscp-rewrite-map.conf
   CacheLastModifiedFactor .1
   # Always check again after 6 hours
   CacheMaxExpire 21600
+  # Allow allow/deny to work as expected
+  CacheQuickHandler off
+  CacheIgnoreHeaders Set-Cookie
+  # Disable caching by default, allow sites/locations to enroll independently
+  SetEnv no-cache
 </IfModule>
 
 # BEGIN AMENDMENTS
