passenger + cgroup overlap cgroup directive

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -361,4 +361,12 @@ Include conf/httpd-apnscp-rewrite-map.conf
 
 IncludeOptional conf.d/*
 Include conf/httpd-custom.conf
+
+<IfModule cgroup_module>
+  Define NEED_CGROUP
+</IfModule>
+<IfModule passenger_module>
+  Define NEED_CGROUP
+</IfModule>
+
 IncludeOptional conf/virtual-httpd-built
